Set height of svg to fix appearance on mobile

--- a/src/css/embed.scss
+++ b/src/css/embed.scss
@@ -98,6 +98,8 @@ a, button {
         display: inline-block;
         vertical-align: middle;
         fill: colour(news-main-1);
+        // Height has to be set for mobile browsers, for some reason
+        height: 16px;
         width: auto;
         path {
             fill: colour(news-main-1);
@@ -111,6 +113,12 @@ a, button {
 .brexit__button--dislike {
     svg {
         transform: rotate(180deg);
+    }
+}
+.brexit__button--survey {
+    svg {
+        // Height has to be set for mobile browsers, for some reason
+        height: 28px;
     }
 }
 .brexit__feedback {
